--- a/index.html
+++ b/index.html
@@ -4,55 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peer Finder - Find Your Perfect Project Partner</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="index.html" class="logo">Peer Finder</a>
+        <div class="nav-links">
+            <a href="index.html" class="nav-btn">Home</a>
+            <a href="finder.html" class="nav-btn">Finder</a>
+            <a href="about.html" class="nav-btn">About</a>
+            <a href="credits.html" class="nav-btn">Credits</a>
+        </div>
+    </nav>
+
     <div class="container">
-        <header class="hero">
-            <div class="hero-content">
-                <h1>Peer Finder</h1>
-                <p class="subtitle">Find the perfect project partner based on skills, interests, and education level</p>
-                <div class="hero-description">
-                    <p>A simulation tool designed to demonstrate intelligent peer matching for group projects. No accounts, no passwords - just smart matching logic.</p>
-                </div>
-                <div class="cta-buttons">
-                    <a href="finder.html" class="btn btn-primary">Start Matching</a>
-                    <a href="about.html" class="btn btn-secondary">Learn More</a>
-                </div>
+        <div class="hero">
+            <h1>Find Your Perfect Project Partner</h1>
+            <p class="description">Connect with students who complement your skills and share your interests</p>
+            <div class="buttons">
+                <a href="finder.html" class="btn-primary">Get Started</a>
+                <a href="about.html" class="btn-secondary">Learn More</a>
             </div>
-        </header>
+        </div>
 
-        <section class="features">
-            <h2>How It Works</h2>
+        <div class="features">
+            <h2>Why Use Peer Finder?</h2>
             <div class="feature-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">📚</div>
-                    <h3>Select Your Level</h3>
-                    <p>Choose your education level: L1, L2 BI,L2 BIS,L2 EB,L3 BI,L3 BIS,L3 EB, M1, or M2</p>
+                <div class="feature">
+                    <div class="icon">🎯</div>
+                    <h3>Smart Matching</h3>
+                    <p>Algorithm-based matching finds partners who complement your skills</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">💼</div>
-                    <h3>Share Your Skills</h3>
-                    <p>Pick what you're good at: coding, design, research, writing, and more</p>
+                <div class="feature">
+                    <div class="icon">💡</div>
+                    <h3>Skill Balance</h3>
+                    <p>Find teammates with different strengths to create balanced teams</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎯</div>
-                    <h3>Find Matches</h3>
-                    <p>Get suggested profiles that complement your skills and interests</p>
+                <div class="feature">
+                    <div class="icon">🤝</div>
+                    <h3>Shared Interests</h3>
+                    <p>Connect with students interested in the same project topics</p>
                 </div>
             </div>
-        </section>
-
-        <section class="info-section">
-            <div class="info-box">
-                <h3>Educational Simulation</h3>
-                <p>This is an offline concept demonstration. All profiles are fictional and generated for simulation purposes. No real data is collected or stored.</p>
-            </div>
-        </section>
+        </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 Peer Finder - Educational Simulation Project</p>
+        <p>&copy; 2025 Peer Finder</p>
     </footer>
 </body>
 </html>
